# registry-api

./: .cruft.json  .env  .gitignore  Makefile  README.md  docker-compose.hex.yml  docker-compose.yml  pyproject.toml
.circleci/: config.yml
app/: conftest.py
app/adapter/into/fastapi/: dependencies.py  main.py
app/adapter/into/fastapi/routes/: entity.py  entity_type.py
app/domain/: data.py  entity.py  entity_type.py  exceptions.py  task.py
app/ports/: entity.py  entity_type.py
app/tests/functional/: test_api.py
app/use_case/: entity.py  entity_type.py  list_uc.py
infra/: Makefile
infra/docker/: api.dockerfile
infra/docker/api/: Dockerfile
infra/docker/mongo/: Dockerfile  init.js
infra/tf/: main.tf  variables.tf
infra/tf_pipeline/: main.tf  variables.tf
scripts/: build.sh  code-artifact-poetry.sh  deploy.sh  docker.sh  lint.sh  plan.sh  push.sh  update_project.sh  util.sh
src/: conftest.py  mypy.ini
src/app/adapter/into/fastapi/: crud.py  dependencies.py  main.py
src/app/adapter/into/fastapi/api_versions/: __init__.py
src/app/adapter/into/fastapi/api_versions/api_v1/: api.py
src/app/adapter/into/fastapi/api_versions/api_v1/routes/: entity.py  entity_type.py  healthcheck.py  link_type.py  property.py
src/app/adapter/into/fastapi/routes/: entity.py  entity_type.py  link_type.py
src/app/domain/: entity.py  entity_type.py  exceptions.py  link_type.py  user.py
src/app/port/adapter/: storage.py
src/app/port/adapter/db/: __init__.py  adapter.py  repositories.py  repository.py  storage.py
src/app/port/adapter/db/nosql/: adapter.py
src/app/port/adapter/db/sql/model/: property_model.py
src/app/port/domain/: link_type.py
src/app/ports/: entity.py  entity_type.py  file.py  link.py  link_type.py  task.py
src/app/ports/db/sql/: __init__.py  adapter.py  repository.py
src/app/ports/feature_flag/: adapter.py
src/app/use_case/: entity.py  entity_type.py
src/tests/: conftest.py  overrides.py
src/tests/functional/: test_api.py  test_entity.py  test_entity_type.py
src/tests/functional/adapter/fastapi/: test_docs.py  test_entity.py  test_entity_type.py  test_healthcheck.py  test_property.py
src/tests/helpers/: factories.py
src/tests/integration/: test_entity.py  test_entity_type.py
src/tests/unit/adapter/db/: test_property_repo.py  test_sql_adapter.py
