[tool.poetry]
name = "attachment-api"
version = "0.1.0"
description = ""
authors = ["Noel Wilson <jwnwilson@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
boto3 = "^1.20.24"
requests = "^2.26.0"
mangum = "^0.12.3"
Jinja2 = "^3.0.3"
hex-lib = {version = "^0.1.0", source = "hex-lib"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
black = "^22.3.0"
isort = "^5.10.1"
boto3-stubs = "^1.20.24"
types-requests = "^2.27.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.poetry.source]]
name = "hex-lib"
url = "https://hex-lib-675468650888.d.codeartifact.eu-west-1.amazonaws.com/pypi/hex-lib/simple/"
secondary = true