[tool.poetry]
name = "attachment-api"
version = "0.1.0"
description = ""
authors = ["Noel Wilson <jwnwilson@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.83"
uvicorn = "^0.16.0"
requests = "^2.26.0"
fastapi-pagination = "^0.10.0"
pymongo = {extras = ["srv"], version = "^4.2.0"}
jsonschema = "^4.16.0"
python-multipart = "^0.0.5"
sqlalchemy = "^1.4.46"
boto3 = "^1.26.50"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
black = "^22.3.0"
isort = "^5.10.1"
types-requests = "^2.27.3"

[tool.poetry.group.dev.dependencies]
sqlalchemy-stubs = "^0.4"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.poetry.source]]
name = "hex-lib"
url = "https://hex-lib-675468650888.d.codeartifact.eu-west-1.amazonaws.com/pypi/hex-lib/simple/"
secondary = true